<resources>
    <string name="app_name">DateNights</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="empty_name">Seu Nome</string>
    <string name="empty_email">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="edit_user_settings">Editar Perfil</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bem vindo!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="error_empty_fields">error</string>
    <string name="error_google_sign_in_failed">error</string>
    <string name="register_message">Não tem uma conta?</string>
    <string name="register">Registrar</string>
    <string name="title_activity_register">ActivityRegister</string>
    <string name="login_message">Já tem uma conta?</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="title_home">Página Inicial</string>
    <string name="title_couple">Casal</string>
    <string name="title_history">Histórico\n</string>
    <string name="title_profile">Perfil</string>
    <string name="copy_code">code</string>
    <string name="copy_link">link</string>
    <string name="share_link">link</string>
    <string name="profile_image">Imagem de perfil</string>
    <string name="label_name">Nome</string>
    <string name="hint_name">Nome</string>
    <string name="label_gender">Gênero</string>
    <string name="label_age">Data de Nascimento\n</string>
    <string name="hint_age">data</string>
    <string name="edit_image">Editar imagem</string>
    <string name="label_birthdate">Data de Nascimento</string>
    <string name="hint_birthdate">dd/mm/YYYY</string>
    <string name="button_save">Salvar</string>
    <string name="choose_or_click_options">Clique no botão abaixo:</string>
    <string name="not_defined">Não definido</string>
    <string name="avatar1_desc" >Avatar 1</string>
    <string name="heart_icon_desc" />
    <string name="avatar2_desc">avatar2</string>
    <string name="null_name">Sem nome</string>
    <string name="loading">loading</string>
    <string name="are_together">Estão juntos!</string>
    <string name="leave_couple">Sair do Casal</string>
    <string name="error_processing_link">Erro ao processar convite por link</string>
    <string name="history">Histórico</string>
    <string name="wish_to_randomize">Deseja randomizar um encontro?</string>
    <string name="app_options">Opções do aplicativo</string>
    <string name="join_couple">Entrar no casal</string>
    <string name="enter_code">Digite ou cole o código</string>
    <string name="create_couple">Criar um casal</string>
    <string name="join_in_couple">Entrar em um casal</string>
    <string name="go_back">Voltar</string>
</resources>