<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.profile.EditProfileFragment">

    <ImageView
        android:id="@+id/back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="Voltar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/back_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Foto de Perfil -->
            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_profile_placeholder"
                android:contentDescription="@string/profile_image"
                android:scaleType="centerCrop"
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackgroundBorderless" />

            <!-- Botão para editar a imagem de perfil -->
            <Button
                android:id="@+id/buttonEditImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_image"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp" />

            <!-- Nome -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_name"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:layout_marginBottom="4dp" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:layout_marginBottom="16dp" />

            <!-- Sexo -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_gender"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:layout_marginBottom="4dp" />

            <Spinner
                android:id="@+id/spinnerGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/gender_options"
                android:layout_marginBottom="16dp" />

            <!-- Data de Nascimento -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_birthdate"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:layout_marginBottom="4dp" />

            <EditText
                android:id="@+id/editTextBirthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_birthdate"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:layout_marginBottom="16dp" />

            <!-- Botão para salvar alterações -->
            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_save"
                android:layout_marginTop="24dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
