<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:id="@+id/results_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_button_with_stroke"
        android:padding="16dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/avatar1_card"
                android:layout_width="84dp"
                android:layout_height="84dp"
                app:cardCornerRadius="42dp"
                app:cardElevation="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:id="@+id/avatar1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/empty_profile"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/avatar1_desc" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/avatar2_card"
                android:layout_width="84dp"
                android:layout_height="84dp"
                app:cardCornerRadius="42dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:id="@+id/avatar2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/empty_profile"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/avatar2_desc" />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/heart_icon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/heart_image"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toEndOf="@id/avatar1_card"
                app:layout_constraintEnd_toStartOf="@id/avatar2_card"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/heart_icon_desc" />

            <TextView
                android:id="@+id/name1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/null_name"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/primaryTextColor"
                android:gravity="center"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@id/avatar1_card"
                app:layout_constraintTop_toBottomOf="@id/avatar1_card"
                app:layout_constraintEnd_toEndOf="@id/avatar1_card" />

            <TextView
                android:id="@+id/name2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/null_name"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/primaryTextColor"
                android:gravity="center"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@id/avatar2_card"
                app:layout_constraintTop_toBottomOf="@id/avatar2_card"
                app:layout_constraintEnd_toEndOf="@id/avatar2_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/together_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/are_together"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/primaryTextColor"
            android:gravity="center"
            android:layout_marginTop="8dp" />
    </LinearLayout>

    <Button
        android:id="@+id/leave_couple_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/leave_couple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
